--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="three"></div>
             <div class="four"></div>
         </div>
-    </footer>
+    </footer><div></div>
    </div>  
 </body>
 </html>
